--- a/portfolio.html
+++ b/portfolio.html
@@ -219,15 +219,16 @@
         <div class="subscribe">
           <strong class="join">Підпишіться на розсилку</strong>
           <div class="field-button">
-            <form class="field-form">
+            <form class="form" autocomplete="off">
               <label class="field-label">
-                <input class="field" name="email" type="email" placeholder="E-mail">
+                <input class="field-input" name="email" type="email" placeholder="E-mail">
               </label>
             </form>
-          <button class="subscribe-button" type="submit"><span class="subscribe-text">Підписатися</span>
-          <svg width="24" height="24">
-            <use href="./img/icons.svg#icon-telegram"></use>
-          </svg></button>
+            <button class="subscribe-button" type="submit"><span class="subscribe-text">Підписатися</span>
+              <svg width="24" height="24">
+                <use href="./img/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </div>
