--- a/index.html
+++ b/index.html
@@ -359,15 +359,16 @@
         <div class="subscribe">
           <strong class="join">Підпишіться на розсилку</strong>
           <div class="field-button">
-            <form class="field-form">
+            <form class="form" autocomplete="off">
               <label class="field-label">
-                <input class="field" name="email" type="email" placeholder="E-mail">
+                <input class="field-input" name="email" type="email" placeholder="E-mail">
               </label>
             </form>
-          <button class="subscribe-button" type="submit"><span class="subscribe-text">Підписатися</span>
-          <svg width="24" height="24">
-            <use href="./img/icons.svg#icon-telegram"></use>
-          </svg></button>
+            <button class="subscribe-button" type="submit"><span class="subscribe-text">Підписатися</span>
+              <svg width="24" height="24">
+                <use href="./img/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </div>
@@ -381,6 +382,40 @@
           </svg>
         </button>
         <b class="modal-title-text">Залиште свої дані, ми вам передзвонимо</b>
+        <form class="modal-form" autocomplete="off">
+          <label class="modal-label">
+            <span class="form-text">Ім'я</span>
+            <input class="modal-input" type="text" name="name">
+            <svg class="modal-icon" width="12" height="12">
+              <use href="./img/icons.svg#icon-name"></use>
+            </svg>
+          </label>
+          <label class="modal-label">
+            <span class="form-text">Телефон</span>
+            <input class="modal-input" type="tel" name="telephone">
+            <svg class="modal-icon" width="13" height="13">
+              <use href="./img/icons.svg#icon-call"></use>
+            </svg>
+          </label>
+          <label class="modal-label">
+            <span class="form-text">Пошта</span>
+            <input class="modal-input" type="email" name="email">
+            <svg class="modal-icon" width="15" height="12">
+              <use href="./img/icons.svg#icon-letter"></use>
+            </svg>
+          </label>
+          <label class="modal-label-comment">
+            <span class="form-text">Коментар</span>
+            <textarea class="textarea" name="comment" rows="7" placeholder="Введіть текст"></textarea>
+          </label>
+          <label class="checkbox">
+            <input class="checkbox-input" type="checkbox" name="checkbox">
+            <span class="checkbox-icon"></span>
+            <span class="checkbox-text">Погоджуюся з розсилкою та приймаю</span>
+            <a class="checkbox-link" href="">Умови договору</a>
+          </label>
+        </form>
+        <button class="send" type="submit"><span class="send-text">Відправити</span></button>
       </div>
     </div>
     <script src="./modal.js"></script>
