--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container">
-        <div>
+        <div class="address-box">
           <a href="./index.html" class="link"
           ><span class="aссent">Web</span><span class="logo-footer">Studio</span></a
         >
